feat: implement jsonrpc insertApp - EBSIINT-2264
